--- a/cicd/buildspec-deploy.yml
+++ b/cicd/buildspec-deploy.yml
@@ -317,12 +317,44 @@ phases:
               fi
             done
             
+            # Emergency import for S3 Images Bucket
+            IMAGES_BUCKET_NAME=$(grep -E "^images_bucket_name\s*=" "environments/${TF_VAR_environment}/terraform.tfvars" 2>/dev/null | sed 's/.*=\s*"\(.*\)".*/\1/' | tr -d ' ' || echo "")
+            if [ ! -z "$IMAGES_BUCKET_NAME" ]; then
+              if aws s3api head-bucket --bucket "$IMAGES_BUCKET_NAME" 2>&1 > /dev/null; then
+                if ! terraform state show "module.s3_images.aws_s3_bucket.web" > /dev/null 2>&1; then
+                  echo "WARNING: S3 images bucket ${IMAGES_BUCKET_NAME} exists but not in state (attempting emergency import)..."
+                  terraform import -var-file="environments/${TF_VAR_environment}/terraform.tfvars" "module.s3_images.aws_s3_bucket.web" "$IMAGES_BUCKET_NAME" 2>&1 || echo "WARNING: Failed to import images bucket ${IMAGES_BUCKET_NAME}"
+                fi
+              fi
+            fi
+            
             # Emergency import for S3 Log Bucket
             LOG_BUCKET_NAME="agentic-retail-os-logs-${TF_VAR_environment}"
             if aws s3api head-bucket --bucket "$LOG_BUCKET_NAME" 2>&1 > /dev/null; then
               if ! terraform state show "module.s3_logs[0].aws_s3_bucket.web" > /dev/null 2>&1; then
                 echo "WARNING: S3 log bucket ${LOG_BUCKET_NAME} exists but not in state (attempting emergency import)..."
                 terraform import -var-file="environments/${TF_VAR_environment}/terraform.tfvars" "module.s3_logs[0].aws_s3_bucket.web" "$LOG_BUCKET_NAME" 2>&1 || echo "WARNING: Failed to import log bucket ${LOG_BUCKET_NAME}"
+              fi
+            fi
+            
+            # Emergency import for CloudFront Distributions (check by CNAME/domain)
+            BASE_DOMAIN=$(grep -E "^base_domain\s*=" "environments/${TF_VAR_environment}/terraform.tfvars" 2>/dev/null | sed 's/.*=\s*"\(.*\)".*/\1/' | tr -d ' ' || echo "")
+            if [ ! -z "$BASE_DOMAIN" ]; then
+              # Determine the actual domain name based on environment
+              if [ "$TF_VAR_environment" = "prod" ]; then
+                CF_DOMAIN="$BASE_DOMAIN"
+              else
+                CF_DOMAIN="${TF_VAR_environment}.${BASE_DOMAIN}"
+              fi
+              
+              # Find CloudFront distribution by CNAME
+              CF_DIST_ID=$(aws cloudfront list-distributions --query "DistributionList.Items[?Aliases.Items[?@=='${CF_DOMAIN}']].Id" --output text 2>&1 | head -1 | tr -d '\n' | tr -d ' ' | tr -d '\t' | tr -d '\r')
+              
+              if [ ! -z "$CF_DIST_ID" ] && [ "$CF_DIST_ID" != "None" ] && [ "$CF_DIST_ID" != "" ] && [ "${#CF_DIST_ID}" -lt 20 ]; then
+                if ! terraform state show "module.cloudfront_web.aws_cloudfront_distribution.web" > /dev/null 2>&1; then
+                  echo "WARNING: CloudFront distribution ${CF_DIST_ID} with CNAME ${CF_DOMAIN} exists but not in state (attempting emergency import)..."
+                  terraform import -var-file="environments/${TF_VAR_environment}/terraform.tfvars" "module.cloudfront_web.aws_cloudfront_distribution.web" "$CF_DIST_ID" 2>&1 || echo "WARNING: Failed to import CloudFront distribution ${CF_DIST_ID}"
+                fi
               fi
             fi
           fi
